@@ -1,3 +1,7 @@
+2003-07-10  James Tanis  <jtt@wonder.sysdetect.com>
+
+	* include/libbk_inline.h (bk_dll_delete): Revamp delete.
+
 2003-07-09  Seth Robertson  <seth@startide.sysdetect.com>
 
 	* lib/b_ringbuf.c: Use liberal sprinkling of volatile to try and
